# test

./: .project  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
app_components/ui/: CMakeLists.txt
app_components/ui/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
app_components/ui/ui/images/: ui_img_logo_icon_60x60_png.c  ui_img_logo_png.c  ui_img_logo_text_160x60_png.c  ui_img_product_info_png.c
app_components/ui/ui/screens/: ui_Screen1.c  ui_Screen2.c
components/lvgl/: .cproject  CMakeLists.txt  lv_conf.h
components/lvgl/porting/: lv_port_disp.c
components/lvgl_esp32_drivers/: .cproject
components/lvgl_esp32_drivers/include/: bsp_board.h
components/lvgl_touch/: .cproject  .project
main/: .cproject  CMakeLists.txt  main.c
